develop : fix z-index

--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -189,5 +189,5 @@
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 20;
+  z-index: 99;
 }
